--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
+[submodule "libs/rbenv"]
+	path = libs/rbenv
+	url = https://github.com/sstephenson/rbenv.git
