--- a/tmux.conf
+++ b/tmux.conf
@@ -78,7 +78,7 @@ bind : command-prompt
 set -g mouse-select-pane on
 set -g pane-border-fg black
 set -g pane-active-border-fg brightred
-#set -g pane-active-border-attr blink
+# set -g pane-active-border-attr blink
 # resize panes with mouse (drag borders)
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
@@ -107,8 +107,8 @@ setw -g mode-fg colour0
 # window status
 #setw -g window-status-format " #F#I:#W#F "
 #setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+setw -g window-status-format "#[fg=black]#[bg=white] #I #[bg=cyan]#[fg=colour8] #W "
+setw -g window-status-current-format "#[bg=white]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
 setw -g window-status-current-bg colour0
 setw -g window-status-current-fg colour11
 setw -g window-status-current-attr dim
@@ -122,7 +122,7 @@ setw -g window-status-content-attr bold,blink,reverse
 
 # Info on right (requires stlarch-terminusmod font)
 set -g status-right-length 60
-set -g status-right '#[fg=brightblue]ßÜ #[fg=brightyellow]#(tmux_upspeed)/#(tmux_downspeed) #[fg=colour7]| #[fg=brightblue]ª #[fg=brightyellow]#(sensors | grep temp1 | cut -d+ -f2 | cut -d. -f1) #[fg=colour7]| #[fg=brightblue]ï #[fg=brightyellow]#(acpi -b | cut -d" " -f4 | cut -d"%" -f1) #[fg=colour7]| #[fg=brightred]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=colour7]| #[fg=brightgreen]%a %H:%M'
+set -g status-right '#[fg=brightgreen]%a %H:%M'
 
 
 # Info on left (I don't have a session display for now)
