some changes that i did not commited earlier

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,9 +34,9 @@ set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 
 # copy mode
-#unbind [
-#bind Escape copy-mode
-#unbind ]
+unbind [
+bind Escape copy-mode
+unbind ]
 bind ] paste-buffer
 
 
@@ -45,8 +45,10 @@ setw -g mode-keys vi
 set -g status-keys vi
 setw -g utf8 on
 # use mouse in copy mode
-setw -g mode-mouse on
-
+set -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
 
 # tmux-zoom.sh
 bind C-z run "tmux-zoom.sh"
@@ -147,3 +149,10 @@ set -g clock-mode-colour blue
 bind x kill-pane
 bind X next-layout
 bind Z previous-layout
+
+# mouse
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
