--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim/bundle/vim-colorschemes"]
 	path = vim/bundle/vim-colorschemes
 	url = https://github.com/flazz/vim-colorschemes.git
+[submodule "vim/bundle/railscasts-theme"]
+	path = vim/bundle/railscasts-theme
+	url = git@github.com:jpo/vim-railscasts-theme.git
