--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# osx
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # change prefix to Ctrl-a (like in gnu-screen)
 unbind C-b
 set-option -g prefix C-a
@@ -32,7 +35,6 @@ set -g history-limit 4096
 # allow terminal scrolling
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-
 # copy mode
 unbind [
 bind Escape copy-mode
@@ -44,11 +46,6 @@ bind ] paste-buffer
 setw -g mode-keys vi
 set -g status-keys vi
 setw -g utf8 on
-# use mouse in copy mode
-set -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
 
 # tmux-zoom.sh
 bind C-z run "tmux-zoom.sh"
@@ -68,23 +65,15 @@ bind = next-window
 bind - previous-window
 bind -n C-Right next-window
 bind -n C-Left previous-window
-# with mouse (click on pretty little boxes)
-set -g mouse-select-window on
-
 
 # colon :
 bind : command-prompt
 
 
 # panes
-set -g mouse-select-pane on
 set -g pane-border-fg black
 set -g pane-active-border-fg brightred
 # set -g pane-active-border-attr blink
-# resize panes with mouse (drag borders)
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-
 
 # status line
 set -g status-utf8 on
@@ -146,8 +135,8 @@ bind X next-layout
 bind Z previous-layout
 
 # mouse
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse-utf8 on
+set -g mouse on
 
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M; send-keys -M; send-keys -M; send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M; send-keys -M; send-keys -M; send-keys -M' 'copy-mode -e; send-keys -M; send-keys -M; send-keys -M; send-keys -M'"
+bind -n WheelDownPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M; send-keys -M; send-keys -M; send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M; send-keys -M; send-keys -M; send-keys -M' 'copy-mode -e; send-keys -M; send-keys -M; send-keys -M; send-keys -M'"
