--- a/tmux.conf
+++ b/tmux.conf
@@ -45,10 +45,6 @@ bind ] paste-buffer
 # use vi mode
 setw -g mode-keys vi
 set -g status-keys vi
-setw -g utf8 on
-
-# tmux-zoom.sh
-bind C-z run "tmux-zoom.sh"
 
 
 # splitting
@@ -76,7 +72,6 @@ set -g pane-active-border-fg brightred
 # set -g pane-active-border-attr blink
 
 # status line
-set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
@@ -100,13 +95,22 @@ setw -g mode-fg colour0
 #setw -g window-status-current-format " #F#I:#W#F "
 setw -g window-status-format "#[fg=black]#[bg=white] #I #[bg=cyan]#[fg=colour8] #W "
 setw -g window-status-current-format "#[bg=white]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
+#setw -g window-status-current-attr dim
+#setw -g window-status-attr reverse
 
+set -g pane-active-border-fg "colour166"
+set -g pane-border-fg "colour241"
+set -g status-fg "colour7"
+set -g status-bg "colour0"
+set -g message-fg "colour0"
+set -g message-bg "colour10"
+setw -g window-status-fg "colour0"
+setw -g window-status-bg "colour11"
+setw -g window-status-attr "none"
+setw -g window-status-activity-fg "colour0"
+setw -g window-status-activity-bg "colour12"
+setw -g window-status-activity-attr "none"
+setw -g window-status-separator " "
 
 # Info on right (requires stlarch-terminusmod font)
 set -g status-right-length 60
@@ -135,8 +139,5 @@ bind X next-layout
 bind Z previous-layout
 
 # mouse
-set -g mouse-utf8 on
 set -g mouse on
 
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M; send-keys -M; send-keys -M; send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M; send-keys -M; send-keys -M; send-keys -M' 'copy-mode -e; send-keys -M; send-keys -M; send-keys -M; send-keys -M'"
-bind -n WheelDownPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M; send-keys -M; send-keys -M; send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M; send-keys -M; send-keys -M; send-keys -M' 'copy-mode -e; send-keys -M; send-keys -M; send-keys -M; send-keys -M'"
