--- a/config/i3/config
+++ b/config/i3/config
@@ -1,5 +1,4 @@
 # Set variables
-set $WS0 "0"
 set $WS1 "1"
 set $WS2 "2"
 set $WS3 "3"
@@ -9,6 +8,7 @@ set $WS6 "6"
 set $WS7 "7"
 set $WS8 "8"
 set $WS9 "9"
+set $WS10 "10"
 
 set $TERM  "termite"
 set $WEB   "chromium"
@@ -58,12 +58,11 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# TODO: THINK ABOUT BETTER SPLIT
 # split in horizontal orientation
-# bindsym $mod+h split h
+bindsym $mod+m split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+bindsym $mod+n split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -95,7 +94,7 @@ bindsym $mod+6 workspace $WS6
 bindsym $mod+7 workspace $WS7
 bindsym $mod+8 workspace $WS8
 bindsym $mod+9 workspace $WS9
-bindsym $mod+0 workspace $WS0
+bindsym $mod+0 workspace $WS10
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $WS1
@@ -107,7 +106,7 @@ bindsym $mod+Shift+6 move container to workspace $WS6
 bindsym $mod+Shift+7 move container to workspace $WS7
 bindsym $mod+Shift+8 move container to workspace $WS8
 bindsym $mod+Shift+9 move container to workspace $WS9
-bindsym $mod+Shift+0 move container to workspace $WS0
+bindsym $mod+Shift+0 move container to workspace $WS10
 
 # move focused container to screen
 bindsym $mod+bracketright move container to output right
