--- a/config/i3/config
+++ b/config/i3/config
@@ -117,10 +117,10 @@ bindsym $mod+Shift+bracketright move workspace to output right
 bindsym $mod+Shift+bracketleft move workspace to output left
 
 # multimedia keys
-bindsym XF86AudioPlay exec mpc
-bindsym XF86AudioStop exec mpc
-bindsym XF86AudioPrev exec mpc
-bindsym XF86AudioNext exec mpc
+bindsym XF86AudioPlay exec mpc toggle
+bindsym XF86AudioStop exec mpc stop
+bindsym XF86AudioPrev exec mpc prev
+bindsym XF86AudioNext exec mpc next
 bindsym XF86AudioMute exec pamixer --toggle-mute
 bindsym XF86AudioRaiseVolume exec pamixer --increase 5
 bindsym XF86AudioLowerVolume exec pamixer --decrease 5
