--- a/config/i3/config
+++ b/config/i3/config
@@ -16,6 +16,9 @@ set $MAIL  ""
 set $FILES ""
 set $MUSIC "ncmpcpp"
 
+# no border hack
+for_window [class="^.*"] border pixel 1
+
 # Set mod
 set $mod Mod4
 
@@ -162,3 +165,4 @@ bindsym $mod+r mode "resize"
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id setxkbmap pl
 exec --no-startup-id nitrogen --restore
+exec --no-startup-id compton -b
