--- a/config/polybar/config
+++ b/config/polybar/config
@@ -1,17 +1,8 @@
-;=====================================================
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/jaagr/polybar
-;
-;   The README contains alot of information
-;
-;=====================================================
-
 [colors]
-background = #00000000
-background-alt = #00000000
-foreground = #ccffffff
-foreground-alt = #ccffffff
+background = #29303a
+background-alt = #5294e2
+foreground = #ffffffff
+foreground-alt = #ffffffff
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
@@ -51,7 +42,7 @@ modules-right = volume memory cpu date
 
 tray-position = right
 tray-padding = 2
-tray-transparent = true
+tray-transparent = false
 
 ;wm-restack = bspwm
 ;wm-restack = i3
@@ -110,17 +101,17 @@ type = internal/i3
 format = <label-state> <label-mode>
 pin-workspaces = true
 index-sort = true
-enable-click = false
+enable-click = true
 enable-scroll = false
 wrapping-scroll = false
 
 label-focused = %icon%
-label-focused-background = #22ffffff
+label-focused-background = ${colors.background-alt}
 label-focused-padding = 5
 
 label-unfocused = %icon%
 label-unfocused-padding = 5
-label-unfocused-foreground = #55ffffff
+label-unfocused-foreground = ${colors.foreground}
 
 label-urgent = %icon%!
 label-urgent-background = #ffff0000
@@ -133,9 +124,9 @@ ws-icon-0 = 1;
 ws-icon-1 = 2;
 ws-icon-2 = 3;
 ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
 ws-icon-7 = 8;
 ws-icon-8 = 9;
 ws-icon-9 = 10;
