--- a/config/termite/config
+++ b/config/termite/config
@@ -1,39 +1,40 @@
 [colors]
-# hard contrast: background = #1d2021
-background = #282828
-# soft contrast: background = #32302f
-foreground = #ebdbb2
-foreground_bold = #ebdbb2
 
-# dark0 + gray
-color0 = #282828
-color8 = #928374
+# special
+foreground      = #eceff1
+foreground_bold = #eceff1
+cursor          = #eceff1
+background      = #263238
 
-# neutral_red + bright_red
-color1 = #cc241d
-color9 = #fb4934
+# black
+color0  = #263238
+color8  = #37474f
 
-# neutral_green + bright_green
-color2 = #98971a
-color10 = #b8bb26
+# red
+color1  = #ff9800
+color9  = #ffa74d
 
-# neutral_yellow + bright_yellow
-color3 = #d79921
-color11 = #fabd2f
+# green
+color2  = #8bc34a
+color10 = #9ccc65
 
-# neutral_blue + bright_blue
-color4 = #458588
-color12 = #83a598
+# yellow
+color3  = #ffc107
+color11 = #ffa000
 
-# neutral_purple + bright_purple
-color5 = #b16286
-color13 = #d3869b
+# blue
+color4  = #03a9f4
+color12 = #81d4fa
 
-# neutral_aqua + faded_aqua
-color6 = #689d6a
-color14 = #8ec07c
+# magenta
+color5  = #e91e63
+color13 = #ad1457
 
-# light4 + light1
-color7 = #a89984
-color15 = #ebdbb2
+# cyan
+color6  = #009688
+color14 = #26a69a
+
+# white
+color7  = #cfd8dc
+color15 = #eceff1
 
