--- a/tmux.conf
+++ b/tmux.conf
@@ -1,143 +1,66 @@
-# osx
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-# change prefix to Ctrl-a (like in gnu-screen)
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-
-
-# shell
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
-
-
-# start with window 1 (instead of 0)
+# 0 is too far from ` ;)
 set -g base-index 1
 
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
 
-# start with pane 1
-set -g pane-base-index 1
+#set -g default-terminal screen-256color
+set -g status-keys vi
+set -g history-limit 10000
 
+setw -g mode-keys vi
+setw -g monitor-activity on
 
-# screen mode
-set -g default-terminal "screen-256color"
+bind-key v split-window -h
+bind-key s split-window -v
 
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
 
-# source config file
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-h resize-pane -L
+bind-key M-l resize-pane -R
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# No delay for escape key press
+set -sg escape-time 0
+
+# Reload tmux config
 bind r source-file ~/.tmux.conf
 
-
-# history
-set -g history-limit 4096
-
-
-# allow terminal scrolling
-set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
-# copy mode
-unbind [
-bind Escape copy-mode
-unbind ]
-bind ] paste-buffer
-
-
-# use vi mode
-setw -g mode-keys vi
-set -g status-keys vi
-
-
-# splitting
-unbind %
-bind h split-window -h
-unbind '"'
-bind v split-window -v
-
-
-# window switching
-unbind n
-bind = next-window
-#unbind p
-bind - previous-window
-bind -n C-Right next-window
-bind -n C-Left previous-window
-
-# colon :
-bind : command-prompt
-
-
-# panes
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
-# set -g pane-active-border-attr blink
-
-# status line
-set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
-set -g status-interval 2
-
-
-# messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
-
-
-#window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
-
-
-# window status
-#setw -g window-status-format " #F#I:#W#F "
-#setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=black]#[bg=white] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=white]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-#setw -g window-status-current-attr dim
-#setw -g window-status-attr reverse
-
-set -g pane-active-border-fg "colour166"
-set -g pane-border-fg "colour241"
-set -g status-fg "colour7"
-set -g status-bg "colour0"
-set -g message-fg "colour0"
-set -g message-bg "colour10"
-setw -g window-status-fg "colour0"
-setw -g window-status-bg "colour11"
-setw -g window-status-attr "none"
-setw -g window-status-activity-fg "colour0"
-setw -g window-status-activity-bg "colour12"
-setw -g window-status-activity-attr "none"
-setw -g window-status-separator " "
-
-# Info on right (requires stlarch-terminusmod font)
-set -g status-right-length 60
-set -g status-right '#[fg=brightgreen]%a %H:%M'
-
-
-# Info on left (I don't have a session display for now)
-set -g status-left ''
-
-
-# loud or quiet?
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-window-option -g monitor-activity off
-set-option -g bell-action none
-
-
-# tmux clock
-set -g clock-mode-colour blue
-
-
-# some key-binding changes
-bind x kill-pane
-bind X next-layout
-bind Z previous-layout
-
-# mouse
-set -g mouse on
+# THEME
+set -g status-bg black
+set -g status-fg white
+set -g window-status-current-bg white
+set -g window-status-current-fg black
+set -g window-status-current-attr bold
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=green](#S) #(whoami) '
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
