--- a/config/polybar/config
+++ b/config/polybar/config
@@ -1,9 +1,9 @@
 [colors]
-background = #29303a
-background-alt = #5294e2
-foreground = #ffffffff
-foreground-alt = #ffffffff
-primary = #ffb52a
+background = ${xrdb:background}
+background-alt = ${xrdb:color6}
+foreground = ${xrdb:foreground}
+foreground-alt = ${xrdb:color0}
+primary = ${xrdb:cursorColor}
 secondary = #e60053
 alert = #bd2c40
 
@@ -14,7 +14,7 @@ height = 27
 radius = 0
 fixed-center = true
 
-underline-size = 1
+underline-size = 0
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -26,26 +26,24 @@ border-size = 0
 border-color = #00000000
 
 padding-left = 0
-padding-right = 2
+padding-right = 0
 
 module-margin-left = 0
-module-margin-right = 2
+module-margin-right = 0
 
 font-0 = NotoSans-Regular:size=8;0
 font-1 = MaterialIcons:size=10;0
 font-2 = Termsynu:size=8;-1
 font-3 = FontAwesome:size=10;0
+font-5 = Gentium;size=10;0
 
 modules-left = i3
 modules-center = xwindow
-modules-right = volume memory cpu date
+modules-right = volume date
 
 tray-position = right
 tray-padding = 2
 tray-transparent = false
-
-;wm-restack = bspwm
-;wm-restack = i3
 
 [bar/right]
 monitor = ${env:MONITOR:DP-4}
@@ -77,28 +75,12 @@ font-3 = FontAwesome:size=10;0
 
 modules-left = i3
 modules-center = xwindow
-modules-right = date
-
-tray-position = right
-tray-padding = 2
-;tray-transparent = true
-;tray-background = #0063ff
-
-;wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
+modules-right = mpd date
 
 [module/i3]
 type = internal/i3
 
-format = <label-state> <label-mode>
+format = <label-state><label-mode>
 pin-workspaces = true
 index-sort = true
 enable-click = true
@@ -107,6 +89,7 @@ wrapping-scroll = false
 
 label-focused = %icon%
 label-focused-background = ${colors.background-alt}
+label-focused-foreground = ${colors.foreground-alt}
 label-focused-padding = 5
 
 label-unfocused = %icon%
@@ -120,136 +103,41 @@ label-urgent-padding = 5
 label-visible = %icon%
 label-visible-padding = 5
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-9 = 10;
-ws-icon-default = 
+label-mode-padding = 2
+label-mode-background = ${xrdb:color9}
+
+label-focused-font = 5
+
+ws-icon-0 = 1;λ
+ws-icon-1 = 2;α
+ws-icon-2 = 3;β
+ws-icon-3 = 4;γ
+ws-icon-4 = 5;δ
+ws-icon-5 = 6;ε
+ws-icon-6 = 7;ζ
+ws-icon-7 = 8;η
+ws-icon-8 = 9;θ
+ws-icon-9 = 10;ι
+ws-icon-default = ω
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
-
-label-layout = %layout%
-label-layout-underline = ${colors.secondary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
+label = %title:0:50:...%
+format-foreground = ${colors.foreground-alt}
+format-background = ${colors.background-alt}
+format-padding = 5
 
 [module/mpd]
 type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
+format-online = <label-song>
 
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
+label-offline = enjoy the silence
 
-label-song-maxlen = 25
+label-song-maxlen = 50
 label-song-ellipsis = true
-
-[module/xbacklight]
-type = internal/xbacklight
-
-format = <label> <bar>
-label = BL
-
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #ff
-bar-indicator-font = 2
-bar-fill = ─
-bar-fill-font = 2
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
-
-[module/backlight-acpi]
-inherit = module/xbacklight
-type = internal/backlight
-card = intel_backlight
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
-label = %percentage%%
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
-label = %percentage_used%%
-
-[module/wlan]
-type = internal/network
-interface = net1
-interval = 3.0
-
-format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
-label-connected = %essid%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-ramp-signal-foreground = ${colors.foreground-alt}
-
-[module/eth]
-type = internal/network
-interface = eth0
-interval = 3.0
-
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+format-online-padding = 3
+format-online-background = ${xrdb:color3}
+format-online-foreground = ${colors.foreground-alt}
 
 [module/date]
 type = internal/date
@@ -261,42 +149,44 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
-
 label = %date% %time%
+label-foreground = ${colors.foreground-alt}
+label-background = ${colors.background-alt}
+label-padding = 2
 
 [module/volume]
 type = internal/volume
 
-format-volume = <ramp-volume> <label-volume>
-label-muted =   muted
-label-muted-foreground = #66
+format-volume = <label-volume>
 
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
+label-muted = silence
+label-muted-foreground = ${colors.foreground}
+label-muted-background = ${xrdb:color1}
+label-muted-padding = 3
 
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 60
+label-volume = volume %percentage%%
+label-volume-foreground = ${colors.foreground}
+label-volume-background = ${xrdb:color8}
+label-volume-padding = 3
 
-format = <ramp> <label>
-format-underline = #f50a4d
-format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
+[module/cpu]
+type = internal/cpu
+interval = 1
+format = <label>
+label = cpu %percentage-cores%
 
-label = %temperature%
-label-warn = %temperature%
-label-warn-foreground = ${colors.secondary}
+label-padding = 3
+label-background = ${xrdb:color3}
+label-foreground = ${colors.foreground-alt}
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
+[module/memory]
+type = internal/memory
+format = <label>
+label = memory %gb_used% / %gb_total%
+
+label-padding = 3
+label-background = ${xrdb:color17}
+label-foreground = ${colors.foreground}
 
 [settings]
 screenchange-reload = true
