--- a/config/termite/config
+++ b/config/termite/config
@@ -1,40 +1,52 @@
+[options]
+font = Hack 10
+
 [colors]
+# Base16 Default Dark
+# Author: Chris Kempson (http://chriskempson.com)
 
-# special
-foreground      = #eceff1
-foreground_bold = #eceff1
-cursor          = #eceff1
-background      = #263238
+foreground      = #d8d8d8
+foreground_bold = #e8e8e8
+cursor          = #e8e8e8
+background      = #181818
 
-# black
-color0  = #263238
-color8  = #37474f
+# 16 color space
 
-# red
-color1  = #ff9800
-color9  = #ffa74d
+# Black, Gray, Silver, White
+color0  = #181818
+color8  = #585858
+color7  = #d8d8d8
+color15 = #f8f8f8
 
-# green
-color2  = #8bc34a
-color10 = #9ccc65
+# Red
+color1  = #ab4642
+color9  = #ab4642
 
-# yellow
-color3  = #ffc107
-color11 = #ffa000
+# Green
+color2  = #a1b56c
+color10 = #a1b56c
 
-# blue
-color4  = #03a9f4
-color12 = #81d4fa
+# Yellow
+color3  = #f7ca88
+color11 = #f7ca88
 
-# magenta
-color5  = #e91e63
-color13 = #ad1457
+# Blue
+color4  = #7cafc2
+color12 = #7cafc2
 
-# cyan
-color6  = #009688
-color14 = #26a69a
+# Purple
+color5  = #ba8baf
+color13 = #ba8baf
 
-# white
-color7  = #cfd8dc
-color15 = #eceff1
+# Teal
+color6  = #86c1b9
+color14 = #86c1b9
 
+# Extra colors
+color15 = #f8f8f8
+color16 = #dc9656
+color17 = #a16946
+color18 = #282828
+color19 = #383838
+color20 = #b8b8b8
+color21 = #e8e8e8
